--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1,119 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="s0x-wJ-Ly9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jII-Le-pW4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Research PapersTVC-->
-        <scene sceneID="1rg-h4-5Qm">
+        <!--Places-->
+        <scene sceneID="m4c-TX-1H5">
             <objects>
-                <tableViewController id="s0x-wJ-Ly9" customClass="ResearchPapersTVC" customModule="researchPapers" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="GX7-fM-0Jg">
+                <tableViewController title="Places" id="v1b-aT-p7I" customClass="PlacesViewController" customModule="favoritePlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="sh8-bk-fvW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="theCell" id="U0o-Um-10a">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="5Ey-h0-YVa">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="U0o-Um-10a" id="Qtg-bI-4Vt">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Ey-h0-YVa" id="PwN-Cb-E57">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="s0x-wJ-Ly9" id="Seq-mP-tV4"/>
-                            <outlet property="delegate" destination="s0x-wJ-Ly9" id="lBn-Rc-qlp"/>
+                            <outlet property="dataSource" destination="v1b-aT-p7I" id="ejx-BK-7xW"/>
+                            <outlet property="delegate" destination="v1b-aT-p7I" id="x7K-bl-uN8"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Places" id="6nZ-xg-2UY">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YdQ-Oa-ezE">
+                            <connections>
+                                <segue destination="pxV-hO-KII" kind="show" identifier="toMap" id="OTv-v4-HdL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="theTable" destination="GX7-fM-0Jg" id="dEc-7t-Ffv"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="toDetail" id="8nn-GD-GON"/>
+                        <outlet property="table" destination="sh8-bk-fvW" id="oLY-jZ-dCx"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qTf-xb-xmT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uc4-nL-0mj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-766" y="4"/>
+            <point key="canvasLocation" x="1797.709923664122" y="3.5211267605633805"/>
         </scene>
-        <!--Detail View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Map-->
+        <scene sceneID="jYc-Q0-8Gc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="DetailViewController" customModule="researchPapers" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                <viewController title="Map" id="pxV-hO-KII" customClass="ViewController" customModule="favoritePlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Lfw-ET-7mS">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0FP-dO-lzh">
-                                <rect key="frame" x="16" y="79" width="361" height="670"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsW-j6-neC">
-                                        <rect key="frame" x="160" y="0.0" width="41.333333333333343" height="73.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acT-uA-vRX">
-                                        <rect key="frame" x="160" y="83.333333333333343" width="41.333333333333343" height="73"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLL-lz-Ksp">
-                                        <rect key="frame" x="160" y="166.33333333333334" width="41.333333333333343" height="73.333333333333343"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4v-HK-sbf">
-                                        <rect key="frame" x="160" y="249.66666666666671" width="41.333333333333343" height="73.333333333333343"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HfW-wA-kii">
-                                        <rect key="frame" x="160" y="333" width="41.333333333333343" height="73.333333333333314"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ien-iw-dcM">
-                                        <rect key="frame" x="129.66666666666666" y="416.33333333333331" width="102" height="253.66666666666669"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Open URL"/>
-                                        <connections>
-                                            <action selector="urlClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lFh-hd-EMo"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pe5-01-LBe">
+                                <rect key="frame" x="16" y="103" width="361" height="715"/>
+                                <gestureRecognizers/>
+                                <hybridMapConfiguration key="preferredConfiguration"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="hFy-qB-XG8" appends="YES" id="6VL-X8-fos"/>
+                                </connections>
+                            </mapView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="QLa-bt-CqZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0FP-dO-lzh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="1oy-PS-5qv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0FP-dO-lzh" secondAttribute="bottom" constant="34" id="5K5-zC-cQ9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0FP-dO-lzh" secondAttribute="trailing" constant="16" id="jkD-jO-ZIP"/>
-                            <constraint firstItem="0FP-dO-lzh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="xPN-cf-vpD"/>
+                            <constraint firstItem="QLa-bt-CqZ" firstAttribute="trailing" secondItem="pe5-01-LBe" secondAttribute="trailing" constant="16" id="5eV-6m-oCb"/>
+                            <constraint firstItem="pe5-01-LBe" firstAttribute="bottom" secondItem="QLa-bt-CqZ" secondAttribute="bottom" id="AfH-Yu-7tL"/>
+                            <constraint firstItem="pe5-01-LBe" firstAttribute="top" secondItem="QLa-bt-CqZ" secondAttribute="top" id="EWo-Tz-aKG"/>
+                            <constraint firstItem="pe5-01-LBe" firstAttribute="leading" secondItem="QLa-bt-CqZ" secondAttribute="leading" constant="16" id="YjA-Va-NFZ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="o51-Hr-pCf"/>
+                    <navigationItem key="navigationItem" title="Map" id="ohu-VO-BYi"/>
                     <connections>
-                        <outlet property="abstractLabel" destination="HfW-wA-kii" id="Yt2-HD-Uew"/>
-                        <outlet property="authorsLabel" destination="BLL-lz-Ksp" id="yrN-ve-OyK"/>
-                        <outlet property="emailLabel" destination="u4v-HK-sbf" id="JtD-G9-88t"/>
-                        <outlet property="titleLabel" destination="VsW-j6-neC" id="prb-Rb-YW6"/>
-                        <outlet property="urlButton" destination="Ien-iw-dcM" id="Esc-Dc-oZb"/>
-                        <outlet property="yearLabel" destination="acT-uA-vRX" id="1vO-Iw-574"/>
+                        <outlet property="mapView" destination="pe5-01-LBe" id="MpJ-o9-FdU"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i1a-Wk-lOz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="1.5" id="hFy-qB-XG8">
+                    <connections>
+                        <action selector="longPress:" destination="pxV-hO-KII" id="Kw1-Ys-Bb5"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="35.877862595419849" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="2603.8167938931297" y="3.5211267605633805"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cEJ-pv-LoF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jII-Le-pW4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PJu-B7-BFI">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="v1b-aT-p7I" kind="relationship" relationship="rootViewController" id="A3z-Ok-cAQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VGa-H1-aYR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="870.99236641221376" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
